--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/answerBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.881"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_baseline_add_24"
+            tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:id="@+id/questionTitleTV"
@@ -16,6 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Question title"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,12 +47,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tagsQdetailRecyclerView"
-            android:layout_width="57dp"
-            android:layout_height="187dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/questionTitleTV" />
+            app:layout_constraintTop_toBottomOf="@+id/questionTitleTV">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
         <TextView
             android:id="@+id/authorTV"
@@ -46,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="Author"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.672"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,8 +72,9 @@
             android:id="@+id/createdAtTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:text="Created at"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/authorTV"
             app:layout_constraintTop_toBottomOf="@+id/authorTV" />
 
@@ -66,6 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="Answers"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.154"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,10 +93,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/answersListRecycler"
-            android:layout_width="79dp"
-            android:layout_height="197dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             app:layout_constraintStart_toStartOf="@+id/answersCountTV"
             app:layout_constraintTop_toBottomOf="@+id/answersCountTV" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
