--- a/app/src/main/res/layout/drawer_activity.xml
+++ b/app/src/main/res/layout/drawer_activity.xml
@@ -24,9 +24,8 @@
 
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <!--        android:fitsSystemWindows="true"-->
-
+                android:layout_height="wrap_content"
+                >
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar_main"
@@ -35,6 +34,7 @@
                     android:background="?attr/colorPrimary"
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    android:theme="@style/AppThemeDrawer"
                     />
             </com.google.android.material.appbar.AppBarLayout>
 
