--- a/app/src/main/res/layout/activity_questions_list.xml
+++ b/app/src/main/res/layout/activity_questions_list.xml
@@ -12,8 +12,9 @@
         android:id="@+id/questionsListRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="25dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="80dp"
+        android:paddingHorizontal="25dp"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,12 +26,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:backgroundTint="@color/colorPrimary"/>
 
     <TextView
         android:id="@+id/emptyQuestionsListText"
