--- a/app/src/main/res/layout/tag_detail_item.xml
+++ b/app/src/main/res/layout/tag_detail_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/tagDetailItemRoot"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="25dp"
+    android:layout_marginHorizontal="12dp"
     android:layout_marginBottom="25dp"
     android:orientation="vertical">
     <TextView
