--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
-    android:background="#777777"
+    android:background="#5F8EF1"
     >
 
     <TextView
@@ -14,6 +14,6 @@
         android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="2dp"
         android:text="Tag name"
-        android:textColor="#FFFFFF"
+        android:textColor="@android:color/white"
         />
 </LinearLayout>
