--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/loginRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
